fix: change CSS overflow to avoid unneccesary scrollbars.

--- a/packages/map-template/src/components/Directions/Directions.scss
+++ b/packages/map-template/src/components/Directions/Directions.scss
@@ -54,7 +54,7 @@
     &__guide {
         padding: var(--spacing-medium) var(--spacing-medium) 0 var(--spacing-medium);
         height: 100%;
-        overflow: scroll;
+        overflow-y: auto;
         display: grid;
         grid-auto-rows: min-content min-content 1fr;
     }
